NO-ISSUE: refactor and add tests
